--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/normalize.min.css" />
     <link rel="stylesheet" href="css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/choices.min.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link href="css/style.css" rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" />
     <link rel="stylesheet" href="css/aos.css" /> 
     <link rel="stylesheet" href="css/swiper.min.css" />
   </head>
